# prysm

./: WORKSPACE  deps.bzl  go.mod  go.sum
api/client/builder/: BUILD.bazel
beacon-chain/blockchain/: chain_info.go  execution_engine.go  process_attestation_helpers.go  process_block.go  process_block_helpers.go  process_block_test.go
beacon-chain/cache/: subnet_ids.go
beacon-chain/cache/depositcache/: deposits_cache.go
beacon-chain/cache/depositsnapshot/: deposits_snapshot.go  deposits_snapshot_test.go  spec_test.go
beacon-chain/core/altair/: epoch_precompute.go  transition.go
beacon-chain/core/blocks/: attestation.go  attester_slashing.go  exit.go  payload.go  payload_test.go  withdrawals.go
beacon-chain/core/helpers/: BUILD.bazel  validators.go
beacon-chain/core/peerdas/: helpers.go
beacon-chain/core/state/: transition.go  transition_no_verify_sig.go
beacon-chain/core/transition/: trailing_slot_state_cache.go  transition.go  transition_no_verify_sig.go
beacon-chain/db/filesystem/: BUILD.bazel  blob.go  pruner.go  pruner_test.go
beacon-chain/db/iface/: interface.go
beacon-chain/db/kv/: BUILD.bazel  blob.go  blob_test.go  blocks.go  kv.go  migration_blinded_beacon_blocks.go  migration_blinded_beacon_blocks_test.go  schema.go
beacon-chain/execution/: BUILD.bazel  engine_client.go  service.go
beacon-chain/forkchoice/protoarray/: store.go  store_test.go
beacon-chain/operations/slashings/: service.go
beacon-chain/powchain/: block_reader.go  block_reader_test.go  engine_client.go
beacon-chain/rpc/: service.go
beacon-chain/slasher/: helpers.go
beacon-chain/state/state-native/: getters_state.go  state_trie.go
beacon-chain/state/stategen/: replay.go
beacon-chain/state/stateutil/: BUILD.bazel  validator_root.go
beacon-chain/state/v2/: getters.go
beacon-chain/sync/: BUILD.bazel  metrics.go  pending_attestations_queue.go  pending_blobs_queue.go  pending_blocks_queue.go  rpc_beacon_blocks_by_root.go  service.go  validate_aggregate_proof.go  validate_attester_slashing.go  validate_beacon_attestation.go  validate_beacon_blocks.go  validate_blob.go
beacon-chain/sync/initial-sync/: blocks_fetcher_test.go  blocks_queue_test.go  initial_sync_test.go  round_robin_test.go
config/fieldparams/: mainnet.go
config/params/: config.go  mainnet_config.go  minimal_config.go
consensus-types/blocks/: execution.go  proto.go
consensus-types/interfaces/: beacon_block.go
consensus-types/wrapper/: beacon_block.go
container/slice/: slice.go  slice_test.go
container/trie/: optimized_deposit_trie.go
crypto/hash/: BUILD.bazel  hash.go  hash_test.go
crypto/hash/custom_hasher/: hasher.h
crypto/hash/custom_hasher/assembly/: sha256_armv8_neon_x1.S  sha256_armv8_neon_x4.S
fuzz/: BUILD.bazel  message_id_fuzz.go  message_id_test.go
proto/: ssz_proto_library.bzl
proto/engine/v1/: BUILD.bazel  (+4 more)
testing/spectest/mainnet/electra/operations/: BUILD.bazel  execution_layer_exits_test.go
testing/spectest/shared/electra/operations/: BUILD.bazel  execution_layer_exits.go  execution_layer_withdrawal_request.go  helpers.go
testing/util/: block.go  merge.go
validator/client/: BUILD.bazel  payload_attestation_test.go  propose.go  service.go  validator.go
validator/node/: node.go
validator/rpc/: accounts.go
(+35 files in other folders)
