load("@prysm//tools/go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["execution_layer_exits_test.go"],
    data = glob(["*.yaml"]) + [
        "@consensus_spec_tests_mainnet//:test_data",
    ],
    shard_count = 4,
    tags = ["spectest"],
    deps = ["//testing/spectest/shared/electra/operations:go_default_library"],
)
